--- a/apps/app/src/react/styles/infoGroup.scss
+++ b/apps/app/src/react/styles/infoGroup.scss
@@ -37,7 +37,6 @@
 	& > .content {
 		overflow-y: auto;
 		overflow-x: hidden;
-		max-height: calc(100vh - 200px);
 		padding: 0 0.6em;
 
 		.title {
